# EE4216-FaceDetect

./: README.md
ThingSpeak_Gateway2/: ThingSpeak_Gateway2.ino
components/who_detect/: who_detect.cpp
components/who_recognition/: shared_mem.cpp  shared_mem.hpp  tcp-client.cpp  tcp_client.cpp  who_recognition.cpp  who_recognition.hpp  who_recognition_2.cpp
examples/human_face_recognition/: dependencies.lock.esp32_s3_eye
examples/human_face_recognition/main/: CMakeLists.txt  app_main.cpp  firebase_logger  firebase_logger.hpp  web_stream.cpp
